# proctoring-experiment-yolo

./: .gitignore  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
api/fastapi-detect/: .env.example  config.py  loggers.py  main.py  middleware_services.py  pyproject.toml  routes.py  utils.py
components/: Proctor.vue
